# flexmon

./: AUDIT-SUMMARY.md  README.md  readme.md  releases.md
agent/: BUILD.md  Dockerfile  go.mod  go.sum
agent/cmd/flexmon-agent/: main.go
backend/api/: Dockerfile  pyproject.toml
backend/api/src/: __init__.py  config.py  main.py  manage.py  version.py
backend/api/src/migrations/: __init__.py
backend/api/src/models/: __init__.py  timescale_schemas.sql
backend/api/src/models/es_index_templates/: ilm-policy.json  logs-template.json  platform-logs-template.json
backend/api/src/routers/: __init__.py  ai_explain.py  alerts_outbox.py  alerts_rules.py  alerts_webhooks.py  auth.py  discovery.py  health.py  metrics_ingest.py  users.py
backend/api/src/services/: __init__.py  alerts_engine.py  elastic.py  licensing.py  notifications.py  snmp_poller.py  timescale.py  vmware_poller.py
backend/license-api/: Dockerfile  pyproject.toml
backend/license-api/src/: config.py  main.py  models.py
docs/: API.md  ARCHITECTURE.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppHeader.tsx  ErrorBoundary.tsx  NoData.tsx  ProtectedRoute.tsx
frontend/src/lib/: api.ts  auth.ts  es.ts  safe.ts
frontend/src/pages/: Alarms.tsx  Dashboard.tsx  Discover.tsx  Login.tsx  Logs.tsx  PlatformLogs.tsx  Reports.tsx  ServerDetail.tsx  Servers.tsx  Settings.tsx  Users.tsx
gateway/: Dockerfile  README.md  docker-compose.yml  requirements.txt
gateway/src/: main.py
infra/: .env.example  build.sh  docker-compose.yml  install.sh  makefile
infra/certificates/: README.md
infra/seed/alerts/: default_rules.json  default_rules.yaml
infra/seed/demo/: demo_logs.ndjson  demo_metrics.ndjson
scripts/: changed-grep.txt  changed-manifest.md  web-branch-commit.sh  web-branch-push.sh  web-branch-report.txt
