[project]
name = "flexmon-api"
version = "1.0.0"
description = "FlexMON API - Monitoring and Observability Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "asyncpg>=0.29.0",
    "aiohttp==3.10.10",
    "elasticsearch>=8.12.0,<9",
    "httpx>=0.25.0",
    "python-jose[cryptography]>=3.3.0",
    "PyJWT==2.9.0",
    "passlib==1.7.4",
    "bcrypt==4.1.2",
    "python-multipart==0.0.9",
    "pyyaml>=6.0.1",
    "psycopg2-binary>=2.9.9",
    "typer>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
